tdf#47349 sc ui: bPosVisible only for fully visible

So this is a regression-inviting guess at a wrong impl.
And I am not a calc guy, so I shouldn't be making this
kind of a change.

The problem was that editingActive couldn't select
cells from other sheets for some cells near the
frozen border. The reason was that multiple splits
are considered active at the same time, and so the
editActive can be monkeyed with. Everything is all
so interconnected that I get rather confused.

This fix does not solve a same problem with a
true window split, only with a window freeze.

The freeze problem is that the left column was
looking at the column (outside its view) and asked
whether it fit inside the start X (0)
+ visible cells +1.

So pretending typical freeze of row 0 and col 0,
which means left starts at 0 and has 1 visible col.
Left activates if col is 0, or 1, or 2.
Since the only possible column in left is 0,
it should only activate in that case.
So visible cells should be --, not ++.

Right? Of course, something probably depends on
the editing view being turned on for partially
visible cells on the right or bottom side,
or perhaps even for the first invisible col/row,
and so this will probably cause a regression.

An alternative would be to -- for the left side
and ++ for the right side (to increase confusion,
but decrease regression potential).

Change-Id: I946512bc7b3994f1750527a1a8c55954234b0d69